--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,11 @@ target/
 
 # Matthew Stuff
 flirpy
+
+#Data
+Data
+Stored States
+HomePositionStored
+CalibrationMatrixStored
+Most_Recent_Calibration.pkl
+Most_Recent_Calibration_IR.pkl
