Adding an example analysis notebook. Also, updating the git ignore to ignore non-public/testing notebooks.

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ Most_Recent_Calibration_IR.pkl
 Most_Recent_Calibration.txt
 Most_Recent_Home.txt
 Most_Recent_Home_IR.txt
+
+# Unshared Notebooks
+Analysis Notebooks/Junk
