removing nonpublic/testing notebooks from tracking. Updating ignore to stop tracking misc. data files to be removed.

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,15 @@ Most_Recent_Calibration_IR.pkl
 Most_Recent_Calibration.txt
 Most_Recent_Home.txt
 Most_Recent_Home_IR.txt
+Analysis Notebooks/cam_1_dx
+Analysis Notebooks/cam_1_dx.png
+Analysis Notebooks/cam_1_dx Locked.png
+Analysis Notebooks/cam_1_dy.png
+Analysis Notebooks/cam_1_dy Locked.png
+Analysis Notebooks/cam_2_dx.png
+Analysis Notebooks/cam_2_dx Locked.png
+Analysis Notebooks/cam_2_dy.png
+Analysis Notebooks/cam_2_dy Locked.png
 
 # Unshared Notebooks
 Analysis Notebooks/Junk
