Telling git to ignore the Mightex SDK folder because those binary files get messed up by git anyway. Also, adding spec-file.txt which contains my conda environment information that currently runs the software correctly.

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,6 @@ Analysis Notebooks/cam_2_dy Locked.png
 
 # Unshared Notebooks
 Analysis Notebooks/Junk
+
+#Mightex SDK
+packages/cameras/Mightex/libx64
